--- a/app/views/application/_semantic_form.html.haml
+++ b/app/views/application/_semantic_form.html.haml
@@ -1,7 +1,6 @@
 = semantic_form_for resource, :url => url do |f|
   -# don't be lazy! :(
   = f.inputs
-  = f.actions do
-    = f.action :submit, :as => :button
-    = f.action :cancel, :as => :link
+  = f.buttons do
+    = f.commit_button
 
