--- a/app/views/application/_semantic_form.html.haml
+++ b/app/views/application/_semantic_form.html.haml
@@ -1,4 +1,4 @@
-= semantic_form_for resource, :url => url do |f|
+= semantic_form_for resource, :url => url, :builder => builder do |f|
   -# don't be lazy! :(
   = f.inputs
   = f.buttons do
