--- a/app/views/application/_resource_form.html.haml
+++ b/app/views/application/_resource_form.html.haml
@@ -1,6 +1,6 @@
 = semantic_form_for resource, :url => url, :builder => builder do |f|
   -# don't be lazy! :(
   = f.inputs
-  = f.buttons do
-    = f.commit_button
+  = f.actions
+
 
