Add index view helper

--- a/app/views/application/_resource_form.html.haml
+++ b/app/views/application/_resource_form.html.haml
@@ -1,5 +1,5 @@
 = semantic_form_for resource, :url => url, :builder => builder do |f|
-  -# don't be lazy! :(
+  -# FIXME don't be lazy! :(
   = f.inputs
   = f.actions
 
