--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,27 +1,5 @@
 %h1 Listing items
 
-%table
-  %tr
-    %th Name
-    %th Price
-    %th Description
-    %th Kind
-    %th Enabled
-    %th
-    %th
-    %th
-
-  - @items.each do |item|
-    %tr
-      %td= item.name
-      %td= item.price
-      %td= item.description
-      %td= item.kind
-      %td= item.enabled
-      %td= link_to 'Show', item
-      %td= link_to 'Edit', edit_item_path(item)
-      %td= link_to 'Destroy', item, :confirm => 'Are you sure?', :method => :delete
-
-%br
+= resources_index @items
 
 = link_to 'New Item', new_item_path
