Using AutocrudAttrs in ItemDecorator

--- a/app/views/application/_resources_index.html.haml
+++ b/app/views/application/_resources_index.html.haml
@@ -1,17 +1,13 @@
--# resource_class = @items.first.class
--# resources = @items
-
 %table.table.table-bordered.table-striped
   %thead
     %tr
-      -# FIXME choose what attributes to display in view model
-      - resource_class.attribute_names.each do |key|
+      - attrs.each do |key|
         %th= resource_class.human_attribute_name(key)
       %th{cols: 3}
   %tbody
     - resources.each do |o|
       %tr
-        - resource_class.attribute_names.each do |key|
+        - attrs.each do |key|
           %td= o.send(key)
         %td= link_to t('view.show'), o
         %td= link_to t('view.edit'), [:edit, o]
