--- a/app/views/application/_resource_form.html.haml
+++ b/app/views/application/_resource_form.html.haml
@@ -1,6 +1,3 @@
 = semantic_form_for resource, :url => url, :builder => builder do |f|
-  -# FIXME don't be lazy! :(
-  = f.inputs
+  = f.inputs(*attrs)
   = f.actions
-
-
