--- a/app/views/application/_resource_form.html.haml
+++ b/app/views/application/_resource_form.html.haml
@@ -1,3 +1,3 @@
-= semantic_form_for resource, :url => url, :builder => builder do |f|
+= semantic_form_for resource, :url => url, :html => {:class => "form-horizontal"}, :builder => builder do |f|
   = f.inputs(*attrs)
   = f.actions
