--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -1,20 +1,5 @@
-%p#notice= notice
 
-%p
-  %b Name:
-  = @item.name
-%p
-  %b Price:
-  = @item.price
-%p
-  %b Description:
-  = @item.description
-%p
-  %b Kind:
-  = @item.kind
-%p
-  %b Enabled:
-  = @item.enabled
+= resource_show @item
 
 = link_to 'Edit', edit_item_path(@item)
 \|
