Supress haml auto indent for user data

--- a/app/views/application/_autocrud_show.html.haml
+++ b/app/views/application/_autocrud_show.html.haml
@@ -4,5 +4,5 @@
     - attrs.each do |key|
       %tr
         %th= resource_class.human_attribute_name(key)
-        %td= resource.send(key)
+        %td~ resource.send(key)
 
